--- a/client/src/screens/productList/ProductList.css
+++ b/client/src/screens/productList/ProductList.css
@@ -1,7 +1,7 @@
 .articles {
   display: grid;
   grid-gap: 26px;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) ) ;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 .article {
@@ -17,7 +17,7 @@
 }
 
 .article > section[role="button"] {
-  padding: .2em;
+  padding: 0.2em;
   background-color: lightgoldenrodyellow;
   border: 1px solid lightgray;
   cursor: pointer;
